DuPont DevSB/src/objects/APTTaskTemplate__c.object
<CustomObject>
    <description>Action Plan Template Task detail</description>
    <fields>
        <fullName>APTTaskTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task Dependency</label>
        <referenceTo>APTTaskTemplate__c</referenceTo>
        <relationshipLabel>APT Task Templates</relationshipLabel>
        <relationshipName>R00NR0000000VaVDMA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Plan_Template__c</fullName>
        <label>Action Plan Template</label>
        <referenceTo>ActionPlanTemplate__c</referenceTo>
        <relationshipLabel>APT Task Templates</relationshipLabel>
        <relationshipName>apTasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DaysFromStart__c</fullName>
        <inlineHelpText>test</inlineHelpText>
        <label>Days After</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dependent__c</fullName>
        <label>Dependent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minutes_Reminder__c</fullName>
        <label>Minutes Reminder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SendEmail__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Send email notification when a Task is created.</description>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Reminder__c</fullName>
        <formula>IF(Reminder__c ,IF(MOD(FLOOR(VALUE(Minutes_Reminder__c) / 60),12) == 0,&apos;12&apos;,TEXT(MOD(FLOOR(VALUE(Minutes_Reminder__c) / 60),12))) &amp; &apos;:&apos; &amp; IF(MOD(VALUE(Minutes_Reminder__c) ,60)==0,&apos;00&apos;,TEXT(MOD(VALUE(Minutes_Reminder__c) ,60)))+&apos; &apos;+ IF( VALUE(Minutes_Reminder__c)&gt;=720, &apos;PM&apos;,&apos;AM&apos;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Reminder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00NR0000000Vd65MAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>taskIndex__c</fullName>
        <label>taskIndex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>APT Task</label>
    <nameField>
        <label>APT Task Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>APT Task Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DaysGreaterThanZero</fullName>
        <active>true</active>
        <errorConditionFormula>DaysFromStart__c  &lt;= 0</errorConditionFormula>
        <errorDisplayField>DaysFromStart__c</errorDisplayField>
        <errorMessage>You must enter a positive number</errorMessage>
    </validationRules>
</CustomObject>